Fixed theme--list for 2x2 on tablet and 1x4 on desktop

--- a/assets/styles/pages/home/themes.scss
+++ b/assets/styles/pages/home/themes.scss
@@ -46,6 +46,11 @@
   }
 
   @media screen and (abstracts.get-size-query('md')) {
+    &--list {
+      flex-wrap: wrap;
+      flex-direction: row;
+    }
+
     .card--theme {
       flex: 1 1 45%;
     }
@@ -53,10 +58,6 @@
 
   @media screen and (abstracts.get-size-query('lg')) {
     &--title {
-    }
-
-    &--list {
-      flex-direction: row;
     }
 
     .card--theme {
